# tree-sitter-radiant

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-radiant.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_radiant/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRadiant/: radiant.h
bindings/swift/TreeSitterRadiantTests/: TreeSitterRadiantTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
