[package]
name = "tree-sitter-radiant"
description = "A DSL for activity detection and monitoring"
version = "0.1.0"
authors = ["Marco Kaufmann <me@marcokaufmann.ch>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "radiant"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mahgoh/tree-sitter-radiant"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
